# otus_cpp_prof_hw14

./: .gitignore  README.md
.github/workflows/: cmake-multi-platform.yml
Requirements/: SRS.md
docs/: Doxyfile  annotated.html  annotated_dup.js  argparse_8hpp.html  argparse_8hpp__incl.map  argparse_8hpp__incl.md5  argparse_8hpp_source.html  avatar_8cpp.html  avatar_8cpp__incl.map  avatar_8cpp__incl.md5  avatar_8cpp_source.html  avatar_8h.html  avatar_8h__dep__incl.map  avatar_8h__dep__incl.md5  avatar_8h__incl.map  avatar_8h__incl.md5  avatar_8h_source.html  class_add_item_in_inventory-members.html  class_add_item_in_inventory.html  class_add_item_in_inventory.js  class_avatar-members.html  class_avatar.html  class_avatar_data_ready-members.html  class_avatar_data_ready.html  class_avatar_data_ready.js  class_avatar_data_ready__inherit__graph.map  class_avatar_data_ready__inherit__graph.md5  class_avatar_list_client_request-members.html  class_avatar_list_client_request.html  class_avatar_list_client_request.js  class_avatar_list_is_ready-members.html  class_avatar_list_is_ready.html  class_avatar_list_is_ready.js  class_broadcast_message-members.html  class_broadcast_message.html  class_broadcast_message.js  class_client_session-members.html  class_client_session.html  class_client_session.js  class_controller-members.html  (+668 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_4.js  classes_a.js  classes_e.js  defines_1.js  enumvalues_5.js  files_1.js  files_2.js  files_6.js  files_7.js  files_8.js  files_a.js  files_b.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_14.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+18 more)
source/: CMakeLists.txt
source/client/: CMakeLists.txt  controller.cpp  controller.h  db_handler.cpp  db_handler.h  game_logic.cpp  game_logic.h  game_logic.ipp  logger_c.cpp  logger_c.h  main.cpp  main.h  menus.h  network_handler.cpp  network_handler.h  parser.cpp  parser.h  texts.h  view.cpp  view.h
source/client_files/files/: client_database.db3  client_database.db3-shm  client_database.db3-wal
source/common/: avatar.cpp  avatar.h  game_elements.h  location.cpp  location.h  location.ipp  npc.cpp  npc.h  settings.h
source/common/proto/: messages.proto
source/gtests/: CMakeLists.txt  client_tests.cpp  server_tests.cpp  tests_main.cpp
source/server/: CMakeLists.txt  database.cpp  database.h  db_handler.cpp  db_handler.h  db_handler.ipp  event.cpp  event.h  event_dispatcher.cpp  event_dispatcher.h  event_handler.h  event_handler.ipp  event_queue.cpp  event_queue.h  game_handler.cpp  game_handler.h  game_handler.ipp  logger_s.cpp  logger_s.h  main.cpp  main.h  network_handler.cpp  network_handler.h  network_handler.ipp  session.cpp  session.h  user_handler.cpp  user_handler.h  user_handler.ipp
